# 4DVP-22-23--EXAM-Rattrapage-main

./: .gitignore  Dockerfile  Makefile  pyproject.toml  subject.md
.github/: dependabot.yml
.github/workflows/: lint-worflow.yml  load-poetry.yml  release.yml  test-worflow.yml
src/mega_calculator/: __main__.py  math.py  operation.py  parser.py
tests/mega_calculator_tests/: test_fail.py  test_math.py
