[tool.poetry]
name = "mega-calculator"
version = "0.1.0"
description = ""
authors = ["cjohnson <cjohnson@gladhost.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
black = "^23.3.0"
pytest-cov = "^4.1.0"
pytest-html = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
